@@ -239,3 +239,4 @@ T_390timecode_info_on_resync:ok+ok:passed:20130318-185621:0.115461517
 T_391fix_bitstream_frame_rate:ad0a8bb759ad2c7e82c274e864171abe:passed:20130329-114522:0.460370742
 T_392avi_audio_chunk_size_0:fb73c5292f35250371b95877c7994103:passed:20130331-134751:0.893777097
 T_393aac_audiospecificconfig_0channels:eb16e5c5bd832c969859116a5738967f:passed:20130413-214142:0.041190089
+T_394flv_negative_cts_offset:def6820e36a7b71524bc5a456e3c2215:passed:20130414-115331:0.123013461
