@@ -1,3 +1,9 @@
+2013-04-14  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: bug fix: The "CTS offset" field of FLV files with
+        AVC/h.264 video tracks is now read as a signed-integer field in
+        accordance with the FLV specifications.
+
 2013-04-13  Moritz Bunkus  <moritz@bunkus.org>
 
         * mkvmerge: bug fix: DTS parsing: no more warnings about
